k8s/cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: example-app
spec:
  tls:
    - hosts:
        - kawaho.me
        - www.kawaho.me
      secretName: homeserver-tls
  rules:
    - host: my-local-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
